# AtlasQueue

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  pyproject.toml
atlasqueue/api/: deps.py  main.py  schemas.py
atlasqueue/api/routers/: health.py  jobs.py
atlasqueue/core/: config.py  enums.py  logging.py  metrics.py
atlasqueue/db/: models.py  session.py
atlasqueue/services/: jobs.py
atlasqueue/worker/: consumer.py  executor.py  handlers.py  lease.py  main.py  retry.py
migrations/: env.py
migrations/versions/: 0001_initial.py
requirements/: base.txt  dev.txt
tests/: conftest.py
tests/integration/: test_job_submission.py
tests/unit/: test_executor.py  test_lease.py  test_metrics.py  test_retry.py
